# ABCNuke

./: .gitignore  CMakeLists.txt  LICENSE  README
cmake/Modules/: FindALEMBIC.cmake  FindIlmBase.cmake  FindNUKE.cmake  FindOpenEXR.cmake
examples/: ABCReadGeo_example1.nk  ABCReadGeo_example2.nk  ABCReadGeo_example3.nk
examples/example1_media/: README
examples/example2_media/: README  heli2.abc
examples/example3_media/: animspheres_24samp.abc  animspheres_96samp.abc
src/: ABCNuke_ArchiveHelper.cpp  ABCNuke_ArchiveHelper.h  ABCNuke_GeoHelper.cpp  ABCNuke_GeoHelper.h  ABCNuke_Interpolation.cpp  ABCNuke_Interpolation.h  ABCNuke_MatrixHelper.cpp  ABCNuke_MatrixHelper.h  ABCReadGeo.cpp  CMakeLists.txt
